* (bug 29737) "MediaWiki:Qbsettings-directionality" should refer to script,
  not language.
* (bug 26360) $wgSessionHandler was overriding system settings unconditionally.
* Removed AjaxFunctions.php. The last remaining function js_unescape() was moved
  to the FCKEditor extension.
* (bug 28762) Resizing to specified height broken for very thin images

=== API changes in 1.19 ===
* BREAKING CHANGE: action=watch now requires POST and token.
* (bug 27790) Add query type for querymodules to output of ApiParamInfo
* (bug 28963) Add langbacklinks query module to the api
* (bug 27593) API should return error message when sha1/sha1base36 is invalid
* (bug 28578) API's parse module should not silently override invalid
  title inputs
* (bug 20699) Watchlist API should list log-events
* (bug 29070) Require a token in API action=watch
* (bug 29221) Expose oldrevid in ApiQueryWatchlist output
* (bug 29267) Always give the servername for meta=siteinfo&siprop=dbrepllag
* (bug 28897) rvparse now respects rvsection for action=query&prop=revisions
* (bug 25734) API: Possible issue with revids validation
* (bug 28002) Internal error in ApiFormatRaw::getMimeType
* (bug 29237) ApiQuery now has an option to output the "iwurl" attribute.
* (bug 28392) Mark action=undelete&timestamps as type "timestamp"
* (bug 21346) Make deleted images searchable by hash (disabled in Miser Mode)
* (bug 27595) sha1 search of list=filearchive does not work
* (bug 26763) Make RSS/Atom of user contributions more visible
* (bug 25133) Allow redirects also for action=parse&pageid
* (bug 29745) Fatal error in API search
* (bug 29476) API returns page title instead of sectiontitle for
  srprop=sectiontitle
* Correct the documentation of srprop properties
* (bug 28817) Add reference help page link to API Modules
* (bug 29935) Improve formatting of examples in ApiParamInfo
* (bug 29938) list=users&usprop=rights shows rights the user doesn't have

=== Languages updated in 1.19 ===
